feat: [Songbird] 외부 index.html 이미지 경로 수정 완료

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="song-card">
 
             
-            <img src="songbird.jpg" alt="엔플라잉 Songbird 이미지" class="song-img">
+            <img src="project/Songbird.jpg" alt="엔플라잉 Songbird 이미지" class="song-img">
             
             <div class="song-info">
                 <h2>Songbird</h2>
